# se2022

./: Makefile  README.md
files/: equal.csv  inequal.csv
soft4/: .gitignore  Makefile  README.md  a.h  b.h  c.h  judgeapp.cpp  test.sh
soft5/: .gitignore  CMakeLists.txt  Makefile  README.md  a.sh  equal.csv  main.h
soft5/src/: files.cpp  files.h  files.ui  input.cpp  input.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  output.cpp  output.h  select.cpp  select.h  select.ui
